WIP for Scoverage.
Run with 'mvn site'.